--- a/password-reset.html
+++ b/password-reset.html
@@ -21,19 +21,14 @@
     <script defer src="./scripts/page.js"></script>
   </head>
 
-  <body data-page="password-reset" class="cc-body">
-    <!-- NAV -->
+  <body data-page="password-reset" class="cc-body2">
+    <!-- ========================================================= -->
+    <!-- NAVBAR                                                    -->
+    <!-- ========================================================= -->
     <nav class="navbar navbar-expand-lg cc-navbar sticky-top">
       <div class="container-xxl px-3">
-        <a
-          class="navbar-brand d-flex align-items-center gap-2"
-          href="index.html"
-        >
-          <img
-            class="cc-mark"
-            src="./Images/CClogo1.png"
-            alt="Crop Cart Logo IMG"
-          />
+        <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
+          <img class="cc-mark" src="./Images/CClogo1.png" alt="Crop Cart Logo IMG" />
           <span class="fw-bold">CropCart</span>
         </a>
 
@@ -52,7 +47,7 @@
               <a class="nav-link" href="index.html">Store</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="login.html">Login</a>
+              <a class="nav-link" href="login.html">Login</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="register.html">Register</a>
@@ -62,15 +57,18 @@
       </div>
     </nav>
 
-    <!-- CONTENT -->
-    <main class="container py-5" style="max-width: 460px">
-      <div class="cc-card p-4">
+    <!-- ========================================================= -->
+    <!-- PAGE CONTENT                                               -->
+    <!-- ========================================================= -->
+    <main class="container-xxl px-5 pb-5 p-5 justify-content-center">
+      <div class="cc-card-ns p-4">
         <h1 class="cc-h2 mb-2">Reset your password</h1>
         <p class="cc-sub mb-4">
           Enter the email on your account. If it exists, we’ll send you a reset
           link.
         </p>
 
+        <!-- JS status messages -->
         <div id="pageStatus" class="small mb-3"></div>
 
         <form id="passwordResetRequestForm" novalidate>
@@ -94,19 +92,25 @@
         <div class="text-center mt-3 small">
           <a href="login.html" class="fw-semibold">Back to login</a>
           <span class="cc-muted"> • </span>
-          <a href="password-reset-confirm.html" class="fw-semibold"
-            >Have a reset code?</a
-          >
+          <a href="password-reset-confirm.html" class="fw-semibold">Have a reset code?</a>
         </div>
       </div>
     </main>
 
-    <footer class="cc-footer mt-5">
-      <div class="container-xxl px-3 py-4 text-center">
-        <small class="cc-muted">© CropCart • Farm-to-table delivery</small>
+    <!-- ========================================================= -->
+    <!-- FOOTER                                                     -->
+    <!-- ========================================================= -->
+    <footer class="cc-footer fixed-bottom">
+      <div class="container-xxl px-3 py-4">
+        <div
+          class="d-flex flex-column flex-md-row align-items-md-center justify-content-between gap-2"
+        >
+          <small class="cc-muted">© CropCart • Farm-to-table delivery</small>
+          <small class="cc-muted">Built with Bootstrap</small>
+        </div>
       </div>
     </footer>
-
+    <!-- Bootstrap bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
