--- a/checkout.html
+++ b/checkout.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>CropCart | Checkout</title>
 
+    <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,7 +28,9 @@
   </head>
 
   <body data-page="checkout" class="cc-body">
-    <!-- Navbar (consistent with other pages) -->
+    <!-- ========================================================= -->
+    <!-- NAVBAR                                                    -->
+    <!-- ========================================================= -->
     <nav class="navbar navbar-expand-lg cc-navbar sticky-top">
       <div class="container-xxl px-3">
         <a
@@ -63,7 +66,7 @@
               <a class="nav-link" href="cart.html">My Cart</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="orders.html">My Orders</a>
+              <a class="nav-link" href="farmer.html">Farmer Portal</a>
             </li>
 
             <!-- Auth.js renders into this LI -->
@@ -73,6 +76,9 @@
       </div>
     </nav>
 
+    <!-- ========================================================= -->
+    <!-- MAIN                                                      -->
+    <!-- ========================================================= -->
     <main class="container py-5">
       <div
         class="d-flex align-items-end justify-content-between flex-wrap gap-3 mb-4"
