--- a/farmer-register.html
+++ b/farmer-register.html
@@ -18,20 +18,14 @@
     <script defer src="./scripts/page.js"></script>
   </head>
 
-  <body data-page="farmer-register" class="cc-body">
-    <nav
-      class="navbar navbar-expand-lg navbar-light cc-navbar border-bottom sticky-top"
-    >
-      <div class="container">
-        <a
-          class="navbar-brand d-flex align-items-center gap-2"
-          href="index.html"
-        >
-          <img
-            class="cc-mark"
-            src="./Images/CClogo1.png"
-            alt="Crop Cart Logo IMG"
-          />
+  <body data-page="farmer-register" class="cc-body2">
+    <!-- ========================================================= -->
+    <!-- NAVBAR                                                    -->
+    <!-- ========================================================= -->
+    <nav class="navbar navbar-expand-lg cc-navbar sticky-top">
+      <div class="container-xxl px-3">
+        <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
+          <img class="cc-mark" src="./Images/CClogo1.png" alt="Crop Cart Logo IMG" />
           <span class="fw-bold">CropCart</span>
         </a>
 
@@ -47,21 +41,27 @@
         <div class="collapse navbar-collapse" id="ccNav">
           <ul class="navbar-nav ms-auto gap-lg-2">
             <li class="nav-item">
+              <a class="nav-link" href="index.html">Store</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="login.html">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="register.html">Customer Registration</a>
+              <a class="nav-link" href="register.html">Register</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <main class="container py-5" style="max-width: 900px">
+    <!-- ========================================================= -->
+    <!-- PAGE CONTENT                                               -->
+    <!-- ========================================================= -->
+    <main class="container px-3 pb-5 p-5 d-flex justify-content-between">
       <div class="row g-4">
         <!-- Application -->
-        <div class="col-12 col-lg-7">
-          <div class="card cc-card shadow-sm">
+        <div class="col-6">
+          <div class="card cc-card-ns p-2">
             <div class="card-body p-4 p-md-5">
               <h1 class="h3 mb-2">Become a CropCart Farmer</h1>
               <p class="text-muted mb-4">
@@ -74,9 +74,7 @@
               <form id="farmerRegisterForm" method="post">
                 <div class="row g-3">
                   <div class="col-md-6">
-                    <label class="form-label" for="providerUsername"
-                      >Username</label
-                    >
+                    <label class="form-label" for="providerUsername">Username</label>
                     <input
                       class="form-control"
                       id="providerUsername"
@@ -97,9 +95,7 @@
                   </div>
 
                   <div class="col-md-6">
-                    <label class="form-label" for="providerPassword"
-                      >Password</label
-                    >
+                    <label class="form-label" for="providerPassword">Password</label>
                     <input
                       class="form-control"
                       id="providerPassword"
@@ -111,9 +107,9 @@
                   </div>
 
                   <div class="col-md-6">
-                    <label class="form-label" for="providerConfirmPassword"
-                      >Confirm password</label
-                    >
+                    <label class="form-label" for="providerConfirmPassword">
+                      Confirm password
+                    </label>
                     <input
                       class="form-control"
                       id="providerConfirmPassword"
@@ -131,10 +127,9 @@
                   </div>
 
                   <div class="col-12">
-                    <label class="form-label" for="farmDescription"
-                      >Farm description
-                      <span class="text-muted">(optional)</span></label
-                    >
+                    <label class="form-label" for="farmDescription">
+                      Farm description <span class="text-muted">(optional)</span>
+                    </label>
                     <textarea
                       class="form-control"
                       id="farmDescription"
@@ -144,10 +139,9 @@
                   </div>
 
                   <div class="col-12">
-                    <label class="form-label" for="farmLocation"
-                      >Farm location
-                      <span class="text-muted">(optional)</span></label
-                    >
+                    <label class="form-label" for="farmLocation">
+                      Farm location <span class="text-muted">(optional)</span>
+                    </label>
                     <input
                       class="form-control"
                       id="farmLocation"
@@ -178,8 +172,8 @@
         </div>
 
         <!-- Status Check -->
-        <div class="col-12 col-lg-5">
-          <div class="card cc-card shadow-sm">
+        <div class="col-6">
+          <div class="card cc-card-ns">
             <div class="card-body p-4 p-md-5">
               <h2 class="h5 mb-2">Check your registration status</h2>
               <p class="text-muted small mb-3">
@@ -212,19 +206,34 @@
                 Tip: we’ll auto-fill this if you submitted on this device.
               </div>
             </div>
-          </div>
+          
 
-          <div class="alert alert-info mt-4 small mb-0">
-            <div class="fw-semibold mb-1">What happens next?</div>
-            <div>
-              Your request is stored as
-              <span class="fw-semibold">pending</span>. Once approved, you can
-              log in as a farmer and access the Farmer Portal.
+            <div class="alert alert-info mt-4 small">
+              <div class="fw-semibold mb-1">What happens next?</div>
+              <div>
+                Your request is stored as
+                <span class="fw-semibold">pending</span>. Once approved, you can
+                log in as a farmer and access the Farmer Portal.
+              </div>
             </div>
           </div>
         </div>
       </div>
     </main>
+
+    <!-- ========================================================= -->
+    <!-- FOOTER                                                     -->
+    <!-- ========================================================= -->
+    <footer class="cc-footer fixed-bottom">
+      <div class="container-xxl px-3 py-4">
+        <div
+          class="d-flex flex-column flex-md-row align-items-md-center justify-content-between gap-2"
+        >
+          <small class="cc-muted">© CropCart • Farm-to-table delivery</small>
+          <small class="cc-muted">Built with Bootstrap</small>
+        </div>
+      </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
