--- a/index.html
+++ b/index.html
@@ -18,27 +18,22 @@
     <!-- Your brand layer on top of Bootstrap -->
     <link rel="stylesheet" href="./styles/style.css" />
 
-    <!--JS PAge links-->
+    <!-- Config + helpers -->
     <script src="./scripts/config.js"></script>
     <script src="./scripts/utils.js"></script>
+
+    <!-- Auth + shared boot logic -->
     <script defer src="./scripts/auth.js"></script>
     <script defer src="./scripts/page.js"></script>
+
+    <!-- Store logic -->
     <script defer src="./scripts/store.js"></script>
   </head>
 
   <body data-page="store" class="cc-body">
-    <!-- Top promo strip 
-    <div class="cc-top-strip align-items-center">
-      <div class="container-xxl px-3 align-items-center">
-        <div class="d-flex flex-column align-items-left gap-2 py-2">
-          <div class="d-flex gap-2">
-            <span class="cc-pill gap-2">Now available for local delivery</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  -->
-    <!-- Navbar -->
+    <!-- ========================================================= -->
+    <!-- NAVBAR                                                    -->
+    <!-- ========================================================= -->
     <nav class="navbar navbar-expand-lg cc-navbar sticky-top">
       <div class="container-xxl px-3">
         <a
@@ -78,7 +73,7 @@
             </li>
             <li>
               <ul class="navbar-nav ms-auto gap-lg-2" id="authNav">
-                <!-- JS populates this -->
+                <!-- auth.js populates this -->
               </ul>
             </li>
           </ul>
@@ -86,9 +81,11 @@
       </div>
     </nav>
 
-    <!-- Main -->
+    <!-- ========================================================= -->
+    <!-- MAIN                                                      -->
+    <!-- ========================================================= -->
     <main class="container-xxl px-3 pb-5">
-      <!-- Hero -->
+      <!-- Hero / Filters -->
       <section class="row g-3 g-lg-4 align-items-stretch mt-3">
         <div class="col-12 col-lg-8">
           <div class="cc-card h-100">
@@ -106,7 +103,7 @@
 
             <hr class="cc-hr" />
 
-            <!-- Controls (IDs must match JS) -->
+            <!-- Controls (IDs must match store.js) -->
             <div class="row g-3 align-items-end">
               <div class="col-12">
                 <label class="form-label cc-label" for="productSearch"
@@ -170,7 +167,7 @@
                 >
                 <select id="productLocation" class="form-select cc-select">
                   <option value="All">All locations</option>
-                  <!-- store.js will auto-populate the rest after products load -->
+                  <!-- store.js auto-populates after products load -->
                 </select>
               </div>
             </div>
@@ -187,11 +184,9 @@
             </div>
 
             <br />
-
             <hr class="cc-hr" />
 
             <div class="d-flex align-items-center justify-content-between">
-              <!--determine if necessary-->
               <small class="cc-muted">Partner delivery available</small>
             </div>
           </div>
@@ -207,12 +202,14 @@
         </div>
 
         <div class="cc-card">
-          <!-- page.js renders products here -->
           <div id="products"></div>
         </div>
       </section>
     </main>
 
+    <!-- ========================================================= -->
+    <!-- FOOTER                                                    -->
+    <!-- ========================================================= -->
     <footer class="cc-footer">
       <div class="container-xxl px-3 py-4">
         <div
@@ -224,8 +221,9 @@
       </div>
     </footer>
 
-    <!-- Full Image Modal -->
-    <!-- Product Details Modal -->
+    <!-- ========================================================= -->
+    <!-- PRODUCT DETAILS MODAL (IDs must match store.js)            -->
+    <!-- ========================================================= -->
     <div class="modal fade" id="productModal" tabindex="-1" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-xl">
         <div class="modal-content">
@@ -250,17 +248,15 @@
                 <div class="cc-card p-2">
                   <img
                     id="productModalImg"
-                    class="img-fluid rounded w-100"
+                    class="img-fluid rounded w-100 cc-product-modal-img"
                     src=""
                     alt="Product image"
-                    style="max-height: 520px; object-fit: contain"
                   />
 
                   <!-- fallback initial (shown only when no image) -->
                   <div
                     id="productModalImgFallback"
-                    class="d-none rounded d-flex align-items-center justify-content-center fw-bold"
-                    style="height: 320px"
+                    class="d-none rounded d-flex align-items-center justify-content-center fw-bold cc-product-modal-fallback"
                   >
                     <span id="productModalInitial">P</span>
                   </div>
@@ -286,6 +282,7 @@
 
                     <div class="fw-semibold mt-1">Provided by</div>
                   </div>
+
                   <div class="d-flex justify-content-between">
                     <div class="text-muted ms-5 px-5" id="productModalFarm">
                       —
@@ -350,7 +347,7 @@
       </div>
     </div>
 
-    <!-- Bootstrap JS (for navbar collapse) -->
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
