--- a/login.html
+++ b/login.html
@@ -22,18 +22,13 @@
   </head>
 
   <body data-page="login" class="cc-body2">
-    <!-- NAV -->
+    <!-- ========================================================= -->
+    <!-- NAVBAR                                                    -->
+    <!-- ========================================================= -->
     <nav class="navbar navbar-expand-lg cc-navbar sticky-top">
       <div class="container-xxl px-3">
-        <a
-          class="navbar-brand d-flex align-items-center gap-2"
-          href="index.html"
-        >
-          <img
-            class="cc-mark"
-            src="./Images/CClogo1.png"
-            alt="Crop Cart Logo IMG"
-          />
+        <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
+          <img class="cc-mark" src="./Images/CClogo1.png" alt="Crop Cart Logo IMG" />
           <span class="fw-bold">CropCart</span>
         </a>
 
@@ -62,9 +57,11 @@
       </div>
     </nav>
 
-    <!-- CONTENT -->
-    <main class="container-xxl px-3 pb-5 p-5 justify-content-center">
-      <div class="cc-card-ns p-4">
+    <!-- ========================================================= -->
+    <!-- PAGE CONTENT                                               -->
+    <!-- ========================================================= -->
+    <main class="container-xxl px-5 pb-5 p-5 justify-content-center">
+      <div class="cc-card-ns p-5 px-5">
         <h1 class="cc-h2 mb-2">Log in</h1>
         <p class="cc-sub mb-4">Welcome back to CropCart</p>
 
@@ -98,9 +95,7 @@
 
           <div class="form-check mb-3">
             <input class="form-check-input" type="checkbox" id="rememberMe" />
-            <label class="form-check-label" for="rememberMe">
-              Remember me
-            </label>
+            <label class="form-check-label" for="rememberMe">Remember me</label>
           </div>
 
           <button id="loginBtn" type="submit" class="btn cc-btn w-100">
@@ -112,15 +107,16 @@
           <span class="cc-muted">No account yet?</span>
           <a href="register.html" class="fw-semibold">Create one</a>
         </div>
-        <div
-          class="d-flex justify-content-center align-items-center mb-3 small"
-        >
+
+        <div class="d-flex justify-content-center align-items-center mb-3 small">
           <a href="password-reset.html" class="fw-semibold">Forgot password?</a>
         </div>
       </div>
     </main>
 
-    <!-- Footer -->
+    <!-- ========================================================= -->
+    <!-- FOOTER                                                     -->
+    <!-- ========================================================= -->
     <footer class="cc-footer fixed-bottom">
       <div class="container-xxl px-3 py-4">
         <div
@@ -132,6 +128,7 @@
       </div>
     </footer>
 
+    <!-- Bootstrap bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
