--- a/orders.html
+++ b/orders.html
@@ -10,7 +10,6 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <!-- Bootstrap Icons (stars, chevrons, etc.) -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
       rel="stylesheet"
@@ -32,7 +31,9 @@
   </head>
 
   <body data-page="orders" class="cc-body">
-    <!-- Navbar -->
+    <!-- ========================================================= -->
+    <!-- NAVBAR                                                    -->
+    <!-- ========================================================= -->
     <nav class="navbar navbar-expand-lg cc-navbar sticky-top">
       <div class="container-xxl px-3">
         <a
@@ -72,7 +73,7 @@
             </li>
             <li>
               <ul class="navbar-nav ms-auto gap-lg-2" id="authNav">
-                <!-- JS opulates this -->
+                <!-- auth.js populates this -->
               </ul>
             </li>
           </ul>
@@ -80,6 +81,9 @@
       </div>
     </nav>
 
+    <!-- ========================================================= -->
+    <!-- MAIN                                                      -->
+    <!-- ========================================================= -->
     <main class="container py-5">
       <div class="d-relative justify-content-left">
         <div>
@@ -158,7 +162,7 @@
 
       <!-- Orders table -->
       <div class="cc-card p-0 overflow-hidden">
-        <div class="table-responsive">
+        <div class="table-responsive  cc-scroll-card-lg">
           <table class="table table-hover mb-0 align-middle">
             <thead class="table-light">
               <tr>
@@ -177,6 +181,9 @@
       </div>
     </main>
 
+    <!-- ========================================================= -->
+    <!-- FOOTER                                                    -->
+    <!-- ========================================================= -->
     <footer class="cc-footer fixed-bottom">
       <div class="container-xxl px-3 py-4">
         <div
