--- a/password-reset-confirm.html
+++ b/password-reset-confirm.html
@@ -5,38 +5,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>CropCart • Set New Password</title>
 
-    <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/style.css" />
 
-    <!-- Shared config + helpers -->
     <script src="./scripts/config.js"></script>
     <script src="./scripts/utils.js"></script>
     <script defer src="./scripts/auth.js"></script>
     <script defer src="./scripts/page.js"></script>
   </head>
 
-  <body data-page="password-reset-confirm" class="cc-body">
+  <body data-page="password-reset-confirm" class="cc-body2">
     <!-- ========================================================= -->
     <!-- NAVBAR                                                    -->
     <!-- ========================================================= -->
     <nav class="navbar navbar-expand-lg cc-navbar sticky-top">
       <div class="container-xxl px-3">
-        <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
-          <img class="cc-mark" src="./Images/CClogo1.png" alt="Crop Cart Logo IMG" />
+        <a
+          class="navbar-brand d-flex align-items-center gap-2"
+          href="index.html"
+        >
+          <img
+            class="cc-mark"
+            src="./Images/CClogo1.png"
+            alt="Crop Cart Logo IMG"
+          />
           <span class="fw-bold">CropCart</span>
         </a>
+
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#ccNav"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="ccNav">
+          <ul class="navbar-nav ms-auto gap-lg-2">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Store</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="login.html">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="register.html">Register</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
 
     <!-- ========================================================= -->
     <!-- PAGE CONTENT                                               -->
     <!-- ========================================================= -->
-    <main class="container py-5 cc-maxw-520">
-      <div class="cc-card p-4">
+    <main class="container-xxl px-5 pb-5 p-5 justify-content-center">
+      <div class="cc-card-ns p-4">
         <h1 class="cc-h2 mb-2">Choose a new password</h1>
         <p class="cc-sub mb-4">
           Paste the <span class="fw-semibold">uid</span> and
@@ -44,23 +72,24 @@
           a new password.
         </p>
 
-        <!-- JS status messages -->
         <div id="pageStatus" class="small mb-3"></div>
 
         <form id="passwordResetConfirmForm" novalidate>
-          <div class="row g-3">
-            <div class="col-12 col-md-6">
+          <div class="row g-3 mb-3">
+            <div class="col-6">
               <label for="resetUid" class="form-label cc-label">uid</label>
               <input id="resetUid" class="form-control cc-input" required />
             </div>
-
-            <div class="col-12 col-md-6">
+            <div class="col-6">
               <label for="resetToken" class="form-label cc-label">token</label>
               <input id="resetToken" class="form-control cc-input" required />
             </div>
-
+          </div>
+          <div class="row g-3 mb-3">
             <div class="col-12">
-              <label for="newPassword" class="form-label cc-label">New password</label>
+              <label for="newPassword" class="form-label cc-label"
+                >New password</label
+              >
               <input
                 id="newPassword"
                 type="password"
@@ -68,9 +97,14 @@
                 required
               />
             </div>
-
+          </div>
+          <div class="row g-3 mb-3">
             <div class="col-12">
-              <button id="resetConfirmBtn" type="submit" class="btn cc-btn w-100">
+              <button
+                id="resetConfirmBtn"
+                type="submit"
+                class="btn cc-btn w-100"
+              >
                 Set new password
               </button>
             </div>
@@ -83,7 +117,20 @@
       </div>
     </main>
 
-    <!-- Bootstrap bundle -->
+    <!-- ========================================================= -->
+    <!-- FOOTER                                                     -->
+    <!-- ========================================================= -->
+    <footer class="cc-footer fixed-bottom">
+      <div class="container-xxl px-3 py-4">
+        <div
+          class="d-flex flex-column flex-md-row align-items-md-center justify-content-between gap-2"
+        >
+          <small class="cc-muted">© CropCart • Farm-to-table delivery</small>
+          <small class="cc-muted">Built with Bootstrap</small>
+        </div>
+      </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
