--- a/register.html
+++ b/register.html
@@ -18,14 +18,21 @@
     <script defer src="./scripts/page.js"></script>
   </head>
 
-  <body data-page="register" class="cc-body">
+  <body data-page="register" class="cc-body2">
     <!-- ========================================================= -->
     <!-- NAVBAR                                                    -->
     <!-- ========================================================= -->
     <nav class="navbar navbar-expand-lg cc-navbar sticky-top">
       <div class="container-xxl px-3">
-        <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
-          <img class="cc-mark" src="./Images/CClogo1.png" alt="Crop Cart Logo IMG" />
+        <a
+          class="navbar-brand d-flex align-items-center gap-2"
+          href="index.html"
+        >
+          <img
+            class="cc-mark"
+            src="./Images/CClogo1.png"
+            alt="Crop Cart Logo IMG"
+          />
           <span class="fw-bold">CropCart</span>
         </a>
 
@@ -58,9 +65,9 @@
     <!-- ========================================================= -->
     <!-- PAGE CONTENT                                               -->
     <!-- ========================================================= -->
-    <main class="container py-5 cc-maxw-720">
-      <div class="card cc-card shadow-sm">
-        <div class="card-body p-4 p-md-5">
+    <main class="px-1 pb-5 p-5 justify-content-center">
+      <div class="card cc-card-ns">
+        <div class="container card-body">
           <h1 class="h3 mb-2">Create your account</h1>
           <p class="text-muted mb-4">
             Sign up to start ordering from local farmers.
@@ -70,7 +77,7 @@
 
           <!-- IDs here MUST match auth.js -->
           <form id="registerForm" method="post">
-            <div class="row g-3">
+            <div class="row g-3 mb-3">
               <div class="col-md-6">
                 <label class="form-label" for="firstName">First name</label>
                 <input
@@ -90,8 +97,9 @@
                   required
                 />
               </div>
-
-              <div class="col-md-12">
+            </div>
+            <div class="row g-3 mb-3">
+              <div class="col-md-6">
                 <label class="form-label" for="lastName">username</label>
                 <input
                   class="form-control"
@@ -101,7 +109,7 @@
                 />
               </div>
 
-              <div class="col-12">
+              <div class="col-6">
                 <label class="form-label" for="email">Email</label>
                 <input
                   class="form-control"
@@ -111,7 +119,8 @@
                   required
                 />
               </div>
-
+              </div>
+              <div class="row g-3 mb-3">
               <div class="col-md-6">
                 <label class="form-label" for="password">Password</label>
                 <input
@@ -125,7 +134,9 @@
               </div>
 
               <div class="col-md-6">
-                <label class="form-label" for="confirmPassword">Confirm password</label>
+                <label class="form-label" for="confirmPassword"
+                  >Confirm password</label
+                >
                 <input
                   class="form-control"
                   id="confirmPassword"
@@ -134,7 +145,7 @@
                   required
                 />
               </div>
-
+              </div>
               <div class="col-12 d-grid mt-2">
                 <button
                   id="registerBtn"
@@ -149,7 +160,6 @@
                 <span class="text-muted">Already have an account?</span>
                 <a href="login.html">Log in</a>
               </div>
-
               <div class="col-12 text-center small">
                 <span class="text-muted">Are you a farmer?</span>
                 <a href="farmer-register.html">Apply to sell on CropCart</a>
@@ -160,7 +170,20 @@
       </div>
     </main>
 
-    <!-- Bootstrap bundle -->
+    <!-- ========================================================= -->
+    <!-- FOOTER                                                     -->
+    <!-- ========================================================= -->
+    <footer class="cc-footer fixed-bottom">
+      <div class="container-xxl px-3 py-4">
+        <div
+          class="d-flex flex-column flex-md-row align-items-md-center justify-content-between gap-2"
+        >
+          <small class="cc-muted">© CropCart • Farm-to-table delivery</small>
+          <small class="cc-muted">Built with Bootstrap</small>
+        </div>
+      </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
